--- a/index.html
+++ b/index.html
@@ -4,11 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TOP Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <div class="headerContainer">
+            <div class="logo">
+                Pikachu
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Pi</a></li>
+                    <li><a href="#">Ka</a></li>
+                    <li><a href="#">Chu</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="mainContainer">
+            <h1>This is Pikachu!</h1>
+            <p>This is a sentence about how awesome and iconic Pikachu is. Pikachu is the most recognizable Pokemon in
+                the series, known to almost anyone. Wanna learn more? Join us!</p>
+
+            <button type="button">Sign Up</button>
+        </div>
+
+        <div class="imageMain">
+            <img src="./Assets/Pikachu.jpg" alt="Pikachu image">
+        </div>
+    </header>
+
+    <section>
+        <h2>Fun facts about Pikachu</h2>
+        <ul>
+            <img src="./Assets/fact1.jpg" alt="">
+            <li>Pikachu was based on a Japanese mochi snack called Daifuku</li>
+            <img src="./Assets/fact2.jpg" alt="">
+            <li>Pikachu loves ketchup!</li>
+            <img src="./Assets/fact3.png" alt="">
+            <li>Scientists discovered a new protein in 2008 and named it Pikachurin</li>
+            <img src="./Assets/fact4.jpg" alt="">
+            <li>"Pika" comes from the Japanese onomatopoeia "pika-pika" which means to sparkle, and "Chu" which is the
+                sound a mouse makes in Japanese</li>
+        </ul>
+    </section>
+
+    <section>
+        <p>
+            "Pika Pika!"
+        </p>
+        <span>Pikachu</span>
+    </section>
+
+    <section>
+        <div class="cta">
+            <h3>>Do you agree that Pikachu is awesome?<h3>
+                    <p>If you do, please show your appreciation by signing up as a proof that you are a Pikachu lover by
+                        clicking
+                        on
+                        that button right over there~</p>
+                    <button type="button"></button>
+        </div>
+    </section>
+
+    <footer>
+        <span>Copyright &copy; The Odin Project 2021</span>
+    </footer>
 
 </body>
 
