Added flex and fonts to header

--- a/index.html
+++ b/index.html
@@ -6,33 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class="headerContainer">
+        <nav>
             <div class="logo">
                 Pikachu
             </div>
-            <nav>
+
+            <div class="nav-links" id="navLinks">
                 <ul>
                     <li><a href="#">Pi</a></li>
                     <li><a href="#">Ka</a></li>
                     <li><a href="#">Chu</a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
 
-        <div class="mainContainer">
-            <h1>This is Pikachu!</h1>
-            <p>This is a sentence about how awesome and iconic Pikachu is. Pikachu is the most recognizable Pokemon in
-                the series, known to almost anyone. Wanna learn more? Join us!</p>
+        <div class="mainPage">
+            <div class="mainContainer">
+                <h1>This is Pikachu!</h1>
+                <p>This is a sentence about how awesome and iconic Pikachu is. Pikachu is the most recognizable Pokemon
+                    in
+                    the series, known to almost anyone. Wanna learn more? Join us!</p>
 
-            <button type="button">Sign Up</button>
-        </div>
+                <button type="button">Sign Up</button>
+            </div>
 
-        <div class="imageMain">
-            <img src="./Assets/Pikachu.jpg" alt="Pikachu image">
+            <div class="imageMain">
+                <img src="./Assets/Pikachu.jpg" alt="Pikachu image">
+            </div>
         </div>
     </header>
 
@@ -60,7 +69,7 @@
 
     <section>
         <div class="cta">
-            <h3>>Do you agree that Pikachu is awesome?<h3>
+            <h3>Do you agree that Pikachu is awesome?<h3>
                     <p>If you do, please show your appreciation by signing up as a proof that you are a Pikachu lover by
                         clicking
                         on
