Changed asset files and laid out flex for 2nd  section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Pikachu
             </div>
 
-            <div class="nav-links" id="navLinks">
+            <div class="nav-links">
                 <ul>
                     <li><a href="#">Pi</a></li>
                     <li><a href="#">Ka</a></li>
@@ -30,8 +30,8 @@
         </nav>
 
         <div class="mainPage">
-            <div class="mainContainer">
-                <h1>This is Pikachu!</h1>
+            <div class="mainPageTxt">
+                <h1>This is<br>Pikachu!</h1>
                 <p>This is a sentence about how awesome and iconic Pikachu is. Pikachu is the most recognizable Pokemon
                     in
                     the series, known to almost anyone. Wanna learn more? Join us!</p>
@@ -39,25 +39,50 @@
                 <button type="button">Sign Up</button>
             </div>
 
-            <div class="imageMain">
-                <img src="./Assets/Pikachu.jpg" alt="Pikachu image">
+            <div class="mainPageImg">
+                <img src="./Assets/pika.png" alt="Pikachu image">
             </div>
         </div>
     </header>
 
     <section>
         <h2>Fun facts about Pikachu</h2>
-        <ul>
-            <img src="./Assets/fact1.jpg" alt="">
-            <li>Pikachu was based on a Japanese mochi snack called Daifuku</li>
-            <img src="./Assets/fact2.jpg" alt="">
-            <li>Pikachu loves ketchup!</li>
-            <img src="./Assets/fact3.png" alt="">
-            <li>Scientists discovered a new protein in 2008 and named it Pikachurin</li>
-            <img src="./Assets/fact4.jpg" alt="">
-            <li>"Pika" comes from the Japanese onomatopoeia "pika-pika" which means to sparkle, and "Chu" which is the
-                sound a mouse makes in Japanese</li>
+        <div class="section2">
+            <ul>
+                <div class="fact">
+                    <div class="factImg">
+                        <img src="./Assets/fact1.jpg" alt="">
+                    </div>
+                    <li>Pikachu was based on a Japanese mochi snack called Daifuku</li>
+                </div>
+
+
+                <div class="fact">
+                    <div class="factImg">
+                        <img src="./Assets/fact2.jpg" alt="">
+                        <li>Pikachu loves ketchup!</li>
+                    </div>
+
+                </div>
+                <div class="fact">
+                    <div class="factImg">
+                        <img src="./Assets/fact3.png" alt="">
+                        <li>Scientists discovered a new protein in 2008 and named it Pikachurin</li>
+                    </div>
+
+                </div>
+                <div class="fact">
+                    <div class="factImg">
+                        <img src="./Assets/fact4.jpg" alt="">
+                    </div>
+                    <li>"Pika" comes from the Japanese onomatopoeia "pika-pika" which means to sparkle, and "Chu" which
+                        is
+                        the
+                        sound a mouse makes in Japanese</li>
+                </div>
+        </div>
         </ul>
+        </div>
     </section>
 
     <section>
