Added sections and footer, finished color layout

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
             <div class="nav-links">
                 <ul>
-                    <li><a href="#">Pi</a></li>
-                    <li><a href="#">Ka</a></li>
-                    <li><a href="#">Chu</a></li>
+                    <li><a href="#">Pika</a></li>
+                    <li><a href="#">Kachu</a></li>
+                    <li><a href="#">Chu!</a></li>
                 </ul>
             </div>
         </nav>
@@ -34,7 +34,10 @@
                 <h1>This is<br>Pikachu!</h1>
                 <p>This is a sentence about how awesome and iconic Pikachu is. Pikachu is the most recognizable Pokemon
                     in
-                    the series, known to almost anyone. Wanna learn more? Join us!</p>
+                    the series, known to almost anyone. <br>
+                    <br>
+                    Wanna learn more? Join us!
+                </p>
 
                 <button type="button">Sign Up</button>
             </div>
@@ -46,60 +49,58 @@
     </header>
 
     <section>
-        <h2>Fun facts about Pikachu</h2>
+        <h2>Fun facts about Pikachu!</h2>
         <div class="section2">
             <ul>
                 <div class="fact">
                     <div class="factImg">
                         <img src="./Assets/fact1.jpg" alt="">
                     </div>
-                    <li>Pikachu was based on a Japanese mochi snack called Daifuku</li>
+                    <li>Pikachu was based on a <br>Japanese mochi snack </li>
                 </div>
 
 
                 <div class="fact">
                     <div class="factImg">
                         <img src="./Assets/fact2.jpg" alt="">
-                        <li>Pikachu loves ketchup!</li>
                     </div>
-
+                    <li>Pikachu loves ketchup</li>
                 </div>
+
                 <div class="fact">
                     <div class="factImg">
                         <img src="./Assets/fact3.png" alt="">
-                        <li>Scientists discovered a new protein in 2008 and named it Pikachurin</li>
                     </div>
-
+                    <li>There is a protein called <br>Pikachurin</li>
                 </div>
+
                 <div class="fact">
                     <div class="factImg">
                         <img src="./Assets/fact4.jpg" alt="">
                     </div>
-                    <li>"Pika" comes from the Japanese onomatopoeia "pika-pika" which means to sparkle, and "Chu" which
-                        is
-                        the
-                        sound a mouse makes in Japanese</li>
+                    <li>"Pika" means to sparkle,<br>"Chu" is a Japanese mouse sound</li>
                 </div>
-        </div>
-        </ul>
+            </ul>
         </div>
     </section>
 
     <section>
-        <p>
-            "Pika Pika!"
-        </p>
-        <span>Pikachu</span>
+        <div class="section3">
+            <p>
+                "Pika Pika!"
+            </p>
+            <span>- Pikachu</span>
+        </div>
     </section>
 
-    <section>
-        <div class="cta">
-            <h3>Do you agree that Pikachu is awesome?<h3>
-                    <p>If you do, please show your appreciation by signing up as a proof that you are a Pikachu lover by
-                        clicking
-                        on
-                        that button right over there~</p>
-                    <button type="button"></button>
+    <section class="cta">
+        <div class="section4">
+            <div class="container">
+                <p class="p1">Do you like Pikachu?</p>
+                <p>If you do, click on that button right over there</p>
+            </div>
+
+            <button type="button">Sign Up</button>
         </div>
     </section>
 
